templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "a5571b4267e60458ca9d7c05f09bc864-1404325575.us-east-1.elb.amazonaws.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: weather-app
            port:
              number: 80
  - host: "a5571b4267e60458ca9d7c05f09bc864-1404325575.us-east-1.elb.amazonaws.com"
    http:
      paths:
      - pathType: Prefix
        path: "/solitaire"
        backend:
          service:
            name: solitaire
            port:
              number: 80
